--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ matrix:
     - php: hhvm
     
 script:
-  - echo $EXECUTE_COVERAGE
-  - if [[ $EXECUTE_COVERAGE == 'true' ]]; then phpunit --testdox --coverage-clover clover.xml tests; fi
-  - if [[ $EXECUTE_COVERAGE != 'true' ]]; then phpunit --testdox tests; fi
+  - phpunit --version
+  - if [[ $EXECUTE_COVERAGE == 'true' ]]; then phpunit --coverage-clover clover.xml tests; fi
+  - if [[ $EXECUTE_COVERAGE != 'true' ]]; then phpunit tests; fi
   
 after_success:
   - if [[ $EXECUTE_COVERAGE == 'true' ]]; then bash <(curl -s https://codecov.io/bash); fi
