--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
   },
   "require": {
     "php": ">= 5.3"
-   },
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.5"
+  },
   "suggest": {
     "ext/openssl": "OpenSSL extension",
     "ext/mcrypt": "MCrypt extension"
