--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,14 @@ matrix:
         - EXECUTE_COVERAGE=true
     - php: 7
     - php: hhvm
-    
+
+before_install:
+    - composer self-update
+    - composer --version
+
+install:
+    - COMPOSER_ROOT_VERSION=dev-master composer update --prefer-source
+
 script:
   - bin/phpunit --version
   - if [[ $EXECUTE_COVERAGE == 'true' ]]; then bin/phpunit --coverage-clover clover.xml tests; fi
