--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
   "suggest": {
     "ext/openssl": "OpenSSL extension",
     "ext/mcrypt": "MCrypt extension"
+  },
+  "config": {
+    "bin-dir": "bin"
   }
 }
