--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ install:
 script:
   - hhvm bin/phpunit --version
   - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then hhvm bin/phpunit -v --debug tests; fi
-  - if [[ $EXECUTE_COVERAGE == 'true' and "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug --coverage-clover clover.xml tests; fi
-  - if [[ $EXECUTE_COVERAGE != 'true' and "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug tests; fi
+  - if [[ $EXECUTE_COVERAGE == 'true' && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug --coverage-clover clover.xml tests; fi
+  - if [[ $EXECUTE_COVERAGE != 'true' && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug tests; fi
   - echo done
 
 after_success:
