--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,10 @@ language: php
 matrix:
   fast_finish: true
   include:
-    - php: 5.3
-    - php: 5.4
     - php: 5.5
     - php: 5.6
       env:
         - EXECUTE_COVERAGE=true
-    - php: 7
     - php: hhvm
 
 before_install:
@@ -24,7 +21,7 @@ install:
 
 script:
   - hhvm bin/phpunit --version
-  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then hhvm bin/phpunit -v --debug tests; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then hhvm vednor/phpunit/phpunit/phpunit -v --debug tests; fi
   - if [[ $EXECUTE_COVERAGE == 'true' && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug --coverage-clover clover.xml tests; fi
   - if [[ $EXECUTE_COVERAGE != 'true' && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug tests; fi
   - echo done
