--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ install:
 
 script:
   - hhvm bin/phpunit --version
+  - hhvm tests/xmlsec-decrypt-content.phpt
+  - hhvm tests/xmlsec-decrypt.phpt
+  - hhvm xmlsec-encrypt.phpt
   - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then hhvm vendor/phpunit/phpunit/phpunit -v --debug tests; fi
   - if [[ $EXECUTE_COVERAGE == 'true' && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug --coverage-clover clover.xml tests; fi
   - if [[ $EXECUTE_COVERAGE != 'true' && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then bin/phpunit -v --debug tests; fi
