debug hhvm errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ before_install:
     - composer self-update
     - composer --version
     - hhvm --version
-
+    - phpenv config-rm xdebug.ini
+    
 install:
     - COMPOSER_ROOT_VERSION=dev-master composer update --prefer-source
 
